--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=1, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CHINA</title>
+    <title>Boranbay bi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="japan">
         <div class="japan-box">
-            <h2>ҚХР</h2>
-            <video class="japan-video" autoplay src="./assets/china.mp4" controls muted></video>
+            <h2>Boranbay bi qesenesi</h2>
+            <video class="japan-video" autoplay src="./assets/boranbay.mp4" controls muted></video>
         </div>
     </div>
 </body>
